--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <nav class="navbar  navbar-expand-lg bg-color">
         <div class="container-fluid">
             <a class="nav-brand text-decoration-none text-warning">
-                <img id="homeInterfaz" height="70" src="./assets/img/codoacodo.png" alt="codoacodo">
+                <img id="homeInterfaz" height="70" style="cursor: pointer;" src="./assets/img/codoacodo.png"
+                    alt="codoacodo">
                 <span class="fs-5">Conf Bs As</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -44,21 +45,18 @@
         </div>
     </nav>
     <div id="list" class="d-flex flex-column gap-3"></div>
-    <template id="templateTicket">
-          <div class="rounded-2 border-1 bg-primary p-5 w-25 ">
-          </div>
-    </template>
     <header class="header d-flex justify-content-center justify-content-lg-end align-items-end position-relative">
-        <div id="carouselExampleSlidesOnly" class="carousel carousel-dark slide opacity-50 w-100" style="height: 90vh" data-bs-ride="carousel">
+        <div id="carouselExampleSlidesOnly" class="carousel carousel-dark slide opacity-50 w-100" style="height: 90vh"
+            data-bs-ride="carousel">
             <div class="carousel-inner w-100 h-100">
                 <div class="carousel-item active">
-                    <img src="./assets/img/ba1.jpg"  alt="catedra">
+                    <img src="./assets/img/ba1.jpg" alt="catedra">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/img/ba2.jpg"  alt="restaurante">
+                    <img src="./assets/img/ba2.jpg" alt="restaurante">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/img/ba3.jpg"  alt="obelisco">
+                    <img src="./assets/img/ba3.jpg" alt="obelisco">
                 </div>
             </div>
         </div>
@@ -132,6 +130,66 @@
             </section>
         </aside>
     </main>
+    <section id="ticketMain"></section>
+    <template id="templateFormTicket">
+        <main id="templateMain" class="hidden">
+            <section class="d-flex flex-column align-items-center my-5">
+                <div class="d-flex flex-column align-items-center">
+                    <div class="d-flex flex-column flex-md-row gap-5">
+                        <div class="p-5 border border-primary text-center">
+                            <h6>Estudiante</h6>
+                            <p>Tiene un descuento</p>
+                            <b>80%</b>
+                            <p>presentar documentacion</p>
+                        </div>
+                        <div class="p-5 border border-success text-center">
+                            <h6>Trainee</h6>
+                            <p>Tiene un descuento</p>
+                            <b>50%</b>
+                            <p>presentar documentacion</p>
+                        </div>
+                        <div class="p-5 border border-warning text-center">
+                            <h6>Junior</h6>
+                            <p>Tiene un descuento</p>
+                            <b>15%</b>
+                            <p>presentar documentacion</p>
+                        </div>
+                    </div>
+                    <span>
+                        <p>VENTA</p>
+                    </span>
+                </div>
+                <h2>VALOR DEL TICKET $</h2>
+                <form class="row col-12 col-md-8 row-gap-4 ">
+                    <div class="col-12 col-md-6 form-floating">
+                        <label for="input" class="label-form">Nombre</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="col-12 col-md-6 form-floating">
+                        <label for="input" class="label-form">Apellido</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="col-12 form-floating">
+                        <label for="" class="form-label">correo</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <label for="" class="form-label">Cantidad</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <label for="" class="form-label">Categoria</label>
+                        <select type="text" class="form-select">
+                            <option value="estudiante">Estudiante</option>
+                            <option value="trainee">Trainee</option>
+                            <option value="junior">Junior</option>
+                        </select>
+                    </div>
+                </form>
+            </section>
+        </main>
+        </div>
+    </template>
     <footer class="d-flex flex-column justify-content-between">
         <section id="footerForm" class="d-flex my-5 flex-fill">
             <div class="col-0 col-md-3 "></div>
@@ -175,7 +233,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-        <script src="./main.js"></script>
+    <script src="./main.js"></script>
 </body>
 
 </html>
