--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
     <nav class="navbar  navbar-expand-lg bg-color">
         <div class="container-fluid">
             <a class="nav-brand text-decoration-none text-warning">
-                <img id="homeInterfaz" height="70" style="cursor: pointer;" src="./assets/img/codoacodo.png"
-                    alt="codoacodo">
+                <img id="homeInterfaz" height="70" style="cursor: pointer;" src="./assets/img/codoacodo.png"alt="codoacodo">
                 <span class="fs-5">Conf Bs As</span>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -133,9 +131,9 @@
     <section id="ticketMain"></section>
     <template id="templateFormTicket">
         <main id="templateMain" class="hidden">
-            <section class="d-flex flex-column align-items-center my-5">
+            <section class="d-flex flex-column align-items-center section-container py-5">
                 <div class="d-flex flex-column align-items-center">
-                    <div class="d-flex flex-column flex-md-row gap-5">
+                    <div class="d-flex flex-column flex-md-row gap-3">
                         <div class="p-5 border border-primary text-center">
                             <h6>Estudiante</h6>
                             <p>Tiene un descuento</p>
@@ -160,20 +158,20 @@
                     </span>
                 </div>
                 <h2>VALOR DEL TICKET $</h2>
-                <form class="container-sm">
-                    <div class="row row-cols-md-2">
-                        <div class="col-12 form-floating mb-3">
-                            <input type="text" id="floatingInput" class="form-control">
+                <form class="formContainer">
+                    <div class="row row-cols-md-2 px-2">
+                        <div class="col-12 form-floating mb-3 px-1">
+                            <input type="text" id="floatingInput" class="form-control" placeholder="Nombre" >
                             <label for="floatingInput">Nombre</label>
                         </div>
-                        <div class="col-12 form-floating">
-                            <input type="text" id="floatingInput" class="form-control">
+                        <div class="form-floating col-12 mb-3 px-1">
+                            <input type="text" id="floatingInput" class="form-control" placeholder="Apellido" >
                             <label for="floatingInput" >Apellido</label>
                         </div>
                     </div>
                     <div class="col form-floating my-3">
-                        <input type="email" id="floatingInput" class="form-control">
-                        <label for="" class="form-label">correo</label>
+                        <input type="email" id="floatingInput" class="form-control" placeholder="Email">
+                        <label for="floatingInput" class="form-label">Correo</label>
                     </div>
                     <div class="row row-col-2">
                         <div class="col">
@@ -190,12 +188,12 @@
                         </div>
                     </div>
                     <div class="input-group col my-4">
-                        <span class="input-group-text">$</span>
-                        <input type="text" placeholder="total :" class="form-control bg-primary-subtle">
+                        <span class="input-group-text">Total $</span>
+                        <input disabled type="text" id="disabledTextInput" class="form-control bg-primary-subtle">
                     </div>
                     <div class="row row-cols-3 justify-content-around">
-                        <button type="submit" class="btn btn-success ">Borrar</button>
                         <button type="submit" class="btn btn-success">Borrar</button>
+                        <button type="submit" class="btn btn-success">Comprar</button>
                     </div>
                 </form>
             </section>
@@ -230,7 +228,7 @@
             </div>
             <div class="col-0 col-md-3"></div>
         </section>
-        <section class="container-fluid p-0 py-3 bg-color">
+        <section class="container-fluid p-0 py-3 bg-color ">
             <ul class="links-info d-flex flex-wrap gap-3 justify-content-center justify-content-md-around m-0">
                 <li><a href="#">Preguntas frecuentes</a></li>
                 <li><a href="#">Contáctanos</a></li>
