--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 officia nisi.</p>
             <div>
                 <button type="button" class="btn btn-outline-light">Quiero ser orador</button>
-                <button type="button" class="btn btn-success">Comprar ticket</button>
+                <button type="button" class="btn btn-success" onClick="interfazTicket()" >Comprar ticket</button>
             </div>
     </header>
     <main>
@@ -130,7 +130,7 @@
     </main>
     <section id="ticketMain"></section>
     <template id="templateFormTicket">
-        <main id="templateMain" class="hidden">
+        <main id="templateMain" class="hidden position-relative">
             <section class="d-flex flex-column align-items-center section-container py-5">
                 <div class="d-flex flex-column align-items-center">
                     <div class="d-flex flex-column flex-md-row gap-3">
@@ -229,7 +229,7 @@
             <div class="col-0 col-md-3"></div>
         </section>
         <section class="container-fluid p-0 py-3 bg-color ">
-            <ul class="links-info d-flex flex-wrap gap-3 justify-content-center justify-content-md-around m-0">
+            <ul class="links-info d-flex flex-wrap gap-3 justify-content-center justify-content-md-around m-0 p-0">
                 <li><a href="#">Preguntas frecuentes</a></li>
                 <li><a href="#">Contáctanos</a></li>
                 <li><a href="#">Prensa</a></li>
