--- a/index.html
+++ b/index.html
@@ -161,16 +161,16 @@
                 <form class="formContainer">
                     <div class="row row-cols-md-2 px-2">
                         <div class="col-12 form-floating mb-3 px-1">
-                            <input type="text" id="floatingInput" class="form-control" placeholder="Nombre" >
+                            <input type="text" id="floatingInput" class="form-control" placeholder="Nombre" required >
                             <label for="floatingInput">Nombre</label>
                         </div>
                         <div class="form-floating col-12 mb-3 px-1">
-                            <input type="text" id="floatingInput" class="form-control" placeholder="Apellido" >
+                            <input type="text" id="floatingInput" class="form-control" placeholder="Apellido" required >
                             <label for="floatingInput" >Apellido</label>
                         </div>
                     </div>
                     <div class="col form-floating my-3">
-                        <input type="email" id="floatingInput" class="form-control" placeholder="Email">
+                        <input type="email" id="floatingInput" class="form-control" placeholder="Email" required >
                         <label for="floatingInput" class="form-label">Correo</label>
                     </div>
                     <div class="row row-col-2">
