--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo esse
                                 fugiat omnis minus nemo, ullam, facere, dolores atque nam ea iusto nobis non alias a
                                 natus delectus suscipit asperiores nulla.
-                                <p />
+                            <p />
                         </div>
                     </div>
                 </div>
@@ -158,7 +158,7 @@
                     </span>
                 </div>
                 <h2>VALOR DEL TICKET $200</h2>
-                <form class="formContainer">
+                <form name="formulario" class="formContainer">
                     <div class="row row-cols-md-2 px-2">
                         <div class="col-12 form-floating mb-3 px-1">
                             <input type="text" id="floatingInput" class="form-control" placeholder="Nombre" required >
@@ -176,7 +176,7 @@
                     <div class="row row-col-2">
                         <div class="col">
                             <label for="" class="form-label">Cantidad</label>
-                            <input type="number" id="inputCantidad" class="form-control">
+                            <input type="number" class="form-control">
                         </div>
                         <div class="col">
                             <label for="" class="form-label">Categoria</label>
