--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     <nav class="navbar  navbar-expand-lg bg-color">
         <div class="container-fluid">
             <a class="nav-brand text-decoration-none text-warning">
-                <img id="homeInterfaz" height="70" style="cursor: pointer;" src="./assets/img/codoacodo.png"alt="codoacodo">
+                <img id="homeInterfaz" height="70" style="cursor: pointer;" src="./assets/img/codoacodo.png"
+                    alt="codoacodo">
                 <span class="fs-5">Conf Bs As</span>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -42,9 +44,9 @@
             </div>
         </div>
     </nav>
-    <div id="list" class="d-flex flex-column gap-3"></div>
-    <header class="header d-flex justify-content-center justify-content-lg-end align-items-end position-relative">
-        <div id="carouselExampleSlidesOnly" class="carousel carousel-dark slide opacity-50 w-100" style="height: 90vh"
+    <header>
+        <section class="header d-flex justify-content-center justify-content-lg-end align-items-end position-relative" >
+            <div id="carouselExampleSlidesOnly" class="carousel carousel-dark slide opacity-50 w-100" style="height: 90vh"
             data-bs-ride="carousel">
             <div class="carousel-inner w-100 h-100">
                 <div class="carousel-item active">
@@ -66,48 +68,54 @@
                 officia nisi.</p>
             <div>
                 <button type="button" class="btn btn-outline-light">Quiero ser orador</button>
-                <button type="button" class="btn btn-success" onClick="interfazTicket()" >Comprar ticket</button>
+                <button type="button" class="btn btn-success" onClick="interfazTicket()">Comprar ticket</button>
             </div>
+        </div>
+        </section>
     </header>
     <main>
-        <article class="article-cards d-flex p-5">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4 d-flex justify-content-around">
-                <div class="col-10 col-md-5 col-lg my-2 my-md-5">
-                    <div class="card">
-                        <img class="card-img-top" src="./assets/img/bill.jpg" alt="el maldito Bill Gatos">
-                        <div class="card-body">
-                            <span class="badge text-bg-warning">Javascript</span>
-                            <span class="badge text-light text-bg-info">React</span>
-                            <h5 class="card-title">Bill gatos</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo esse
-                                fugiat omnis minus nemo, ullam, facere, dolores atque nam ea iusto nobis non alias a
-                                natus delectus suscipit asperiores nulla.
-                            <p />
+        <article>
+            <div class="article-cards d-flex p-5">
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4 d-flex justify-content-around">
+                    <div class="col-10 col-md-5 col-lg my-2 my-md-5">
+                        <div class="card">
+                            <img class="card-img-top" src="./assets/img/bill.jpg" alt="el maldito Bill Gatos">
+                            <div class="card-body">
+                                <span class="badge text-bg-warning">Javascript</span>
+                                <span class="badge text-light text-bg-info">React</span>
+                                <h5 class="card-title">Bill gatos</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo esse
+                                    fugiat omnis minus nemo, ullam, facere, dolores atque nam ea iusto nobis non alias a
+                                    natus delectus suscipit asperiores nulla.
+                                    <p />
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-10 col-md-5 col-lg my-2 my-md-5">
-                    <div class="card">
-                        <img class="card-img-top" src="./assets/img/steve.jpg" alt="el maldito Bill Gatos">
-                        <div class="card-body">
-                            <span class="badge text-bg-warning">Javascript</span>
-                            <span class="badge text-light text-bg-info">React</span>
-                            <h5 class="card-title">Enemigo de Bill gatos</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
-                                voluptatibus alias, officia qui blanditiis hic. Suscipit nisi ad vitae facere laudantium
-                                necessitatibus, placeat rerum illum dignissimos? Maiores veritatis quod ipsa!</p>
+                    <div class="col-10 col-md-5 col-lg my-2 my-md-5">
+                        <div class="card">
+                            <img class="card-img-top" src="./assets/img/steve.jpg" alt="el maldito Bill Gatos">
+                            <div class="card-body">
+                                <span class="badge text-bg-warning">Javascript</span>
+                                <span class="badge text-light text-bg-info">React</span>
+                                <h5 class="card-title">Enemigo de Bill gatos</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
+                                    voluptatibus alias, officia qui blanditiis hic. Suscipit nisi ad vitae facere
+                                    laudantium
+                                    necessitatibus, placeat rerum illum dignissimos? Maiores veritatis quod ipsa!</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-10 col-md-5 col-lg my-2 my-md-5">
-                    <div class="card">
-                        <img class="card-img-top" src="./assets/img/ada.jpeg" alt="el maldito Bill Gatos">
-                        <div class="card-body">
-                            <span class="badge text-bg-dark">Negocios</span>
-                            <span class="badge text-light text-bg-danger">Startups</span>
-                            <h5 class="card-title">Ada no se que</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio eos dolor
-                                assumenda pariatur excepturi tempore laudantium soluta, cum expedita itaque.</p>
+                    <div class="col-10 col-md-5 col-lg my-2 my-md-5">
+                        <div class="card">
+                            <img class="card-img-top" src="./assets/img/ada.jpeg" alt="el maldito Bill Gatos">
+                            <div class="card-body">
+                                <span class="badge text-bg-dark">Negocios</span>
+                                <span class="badge text-light text-bg-danger">Startups</span>
+                                <h5 class="card-title">Ada no se que</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio eos
+                                    dolor
+                                    assumenda pariatur excepturi tempore laudantium soluta, cum expedita itaque.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -128,106 +136,37 @@
             </section>
         </aside>
     </main>
-    <section id="ticketMain"></section>
-    <template id="templateFormTicket">
-        <div id="templateMain" class="hidden">
-            <section class="d-flex flex-column align-items-center section-container py-5">
-                <div class="d-flex flex-column align-items-center">
-                    <div class="d-flex flex-column flex-md-row gap-3">
-                        <div class="p-5 border border-primary text-center">
-                            <h6>Estudiante</h6>
-                            <p>Tiene un descuento</p>
-                            <b>80%</b>
-                            <p>presentar documentacion</p>
-                        </div>
-                        <div class="p-5 border border-success text-center">
-                            <h6>Trainee</h6>
-                            <p>Tiene un descuento</p>
-                            <b>50%</b>
-                            <p>presentar documentacion</p>
-                        </div>
-                        <div class="p-5 border border-warning text-center">
-                            <h6>Junior</h6>
-                            <p>Tiene un descuento</p>
-                            <b>15%</b>
-                            <p>presentar documentacion</p>
-                        </div>
-                    </div>
-                    <span>
-                        <p>VENTA</p>
-                    </span>
-                </div>
-                <h2>VALOR DEL TICKET $200</h2>
-                <form name="formulario" class="formContainer">
-                    <div class="row row-cols-md-2 px-2">
-                        <div class="col-12 form-floating mb-3 px-1">
-                            <input type="text" id="floatingInput" class="form-control" placeholder="Nombre" required >
-                            <label for="floatingInput">Nombre</label>
-                        </div>
-                        <div class="form-floating col-12 mb-3 px-1">
-                            <input type="text" id="floatingInput" class="form-control" placeholder="Apellido" required >
-                            <label for="floatingInput" >Apellido</label>
-                        </div>
-                    </div>
-                    <div class="col form-floating my-3">
-                        <input type="email" id="floatingInput" class="form-control" placeholder="Email" required >
-                        <label for="floatingInput" class="form-label">Correo</label>
-                    </div>
-                    <div class="row row-col-2">
-                        <div class="col">
-                            <label for="" class="form-label">Cantidad</label>
-                            <input type="number" class="form-control">
-                        </div>
-                        <div class="col">
-                            <label for="" class="form-label">Categoria</label>
-                            <select type="text" id="select" class="form-select">
-                                <option value="estudiante">Estudiante</option>
-                                <option value="trainee">Trainee</option>
-                                <option value="junior">Junior</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="input-group col my-4">
-                        <span class="input-group-text">Total $</span>
-                        <input disabled type="text" id="disabledTextInput" class="form-control bg-primary-subtle">
-                    </div>
-                    <div class="row row-cols-3 justify-content-around">
-                        <button types="reset" class="btn btn-success" onclick="borrar()" >Borrar</button>
-                        <button type="submit" class="btn btn-success" onclick="comprar()" >Comprar</button>
-                    </div>
-                </form>
-            </section>
-        </div>
-        </div>
-    </template>
     <footer class="d-flex flex-column justify-content-between">
-        <section id="footerForm" class="d-flex my-5 flex-fill">
-            <div class="col-0 col-md-3 "></div>
-            <div class="col-12 col-md-6 px-2 px-sm-5 px-md-0 d-flex flex-column justify-content-center">
-                <legend class="text-center mb-3">Anotate como orador para dar una <a href="#">charla ignite</a>.
-                    Cuentanos de que quieres
-                    hablar!</legend>
-                <form class="d-flex flex-column gap-4 ">
-                    <div class="row-cols-12 row-cols-md d-md-flex gap-1 px-md-1">
-                        <div class="col-md-6 pb-1 pb-md-0">
-                            <input type="text" placeholder="Nombre" class="form-control">
+        <article id="footerForm" class="h-100 my-5 py-5">
+            <section class="d-flex my-5 flex-fill">
+                <div class="col-0 col-md-3 "></div>
+                <div class="col-12 col-md-6 px-2 px-sm-5 px-md-0 d-flex flex-column justify-content-center">
+                    <legend class="text-center mb-4">Anotate como orador para dar una <a href="#">charla ignite</a>.
+                        Cuentanos de que quieres
+                        hablar!</legend>
+                    <form class="d-flex flex-column gap-4 ">
+                        <div class="row-cols-12 row-cols-md d-md-flex gap-1 px-md-1">
+                            <div class="col-md-6 pb-1 pb-md-0">
+                                <input type="text" placeholder="Nombre" class="form-control">
+                            </div>
+                            <div class="col-md-6 pt-1 pt-md-0">
+                                <input type="text" placeholder="Apellido" class="form-control">
+                            </div>
                         </div>
-                        <div class="col-md-6 pt-1 pt-md-0">
-                            <input type="text" placeholder="Apellido" class="form-control">
+                        <div class="row-cols-12 row-cols-md">
+                            <textarea class="form-control" rows="4" type="text"
+                                placeholder="Sobre que quieres hablar"></textarea>
                         </div>
-                    </div>
-                    <div class="row-cols-12 row-cols-md">
-                        <textarea class="form-control" rows="4" type="text"
-                            placeholder="Sobre que quieres hablar"></textarea>
-                    </div>
-                    <div class="row-cols-12 row-cols-md text-center">
-                        <label class="col-12 col-md" for="form-label">Recuerda incluir un titulo para tu charla</label>
-                        <button class="col-12 col-md btn btn-success">Enviar</button>
-                    </div>
-                </form>
-            </div>
-            <div class="col-0 col-md-3"></div>
-        </section>
+                        <div class="row-cols-12 row-cols-md text-center">
+                            <label class="col-12 col-md" for="form-label">Recuerda incluir un titulo para tu
+                                charla</label>
+                            <button class="col-12 col-md btn btn-success">Enviar</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-0 col-md-3"></div>
+            </section>
+        </article>
         <section class="container-fluid p-0 py-3 bg-color ">
             <ul class="links-info d-flex flex-wrap gap-3 justify-content-center justify-content-md-around m-0 p-0">
                 <li><a href="#">Preguntas frecuentes</a></li>
@@ -243,6 +182,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+    <script src="./components/Form.js"></script>
+    <script src="./components/CardInfo.js" ></script>
     <script src="./main.js"></script>
     <script src="./form.js"></script>
 </body>
